# ai-restaurant-agent

./: .env_example  README.md  docker-compose.yml
ai_agent/: Dockerfile  app.py  pyproject.toml
ai_agent/agents/: agent.py
ai_agent/agents/prompt/: prompt.py
ai_agent/agents/tools/: db_query.py  restaurant_reservation.py  submit_final_answer.py
ai_agent/agents/utils/: restaurant_parser.py
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: create_reservations_table.py  create_restaurant_table.py
backend/app/core/: config.py  db.py
backend/scripts/: prestart.sh
